@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-       version="1.1.7"
+       version="1.1.8"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
